# functional_programming_lab2

./: README.md  dune-project  functional_programming_lab2.opam
.github/workflows/: ci-cd.yml
lib/: dune  prefix_tree_dict.ml  prefix_tree_dict.mli
test/: dune  property_tests.ml  test_functional_programming_lab2.ml
